add setter